# lab_works

./: README.md
fourth-semester/computational-mathematics/: CMakeLists.txt
fourth-semester/computational-mathematics/RCS/: cmath.h  rkf45.cpp  spline.cpp  zeroin.cpp
fourth-semester/computational-mathematics/coursework/: CMakeLists.txt  calculateEquation.cpp  calculateIntegral.cpp  calculateT.cpp  countEpsilon.cpp  countExp.cpp  functions.hpp  main.cpp
fourth-semester/computational-mathematics/lab1/: CMakeLists.txt  countIntegral.cpp  countSpline.cpp  createLagrange.cpp  functions.hpp  main.cpp
fourth-semester/computational-mathematics/lab2/: CMakeLists.txt  calculateMatrixNorm.cpp  calculateRate.cpp  countInverseMatrix.cpp  functions.hpp  initEMatrix.cpp  main.cpp  multiplyMatrices.cpp  printMatrix.cpp  subtractMatrices.cpp
fourth-semester/computational-mathematics/lab3/: CMakeLists.txt  function.cpp  functions.hpp  main.cpp  useRKF.cpp  useRungeKutta.cpp  useRungeKuttaMethod.cpp
fourth-semester/computational-mathematics/software/: DECOMP.CPP  FMIN.CPP  FORSYTHE.H  Forsythe.doc  QUANC8.CPP  RKF45.CPP  SPLINE.CPP  SVD.CPP  TEST.CPP  URAND.CPP  ZEROIN.CPP
seventh-semester/computer-graphics/: CMakeLists.txt
seventh-semester/computer-graphics/coursework/: CMakeLists.txt  attractor.cpp  draw_functions.cpp  functions.cpp  glut_functions.cpp  main.cpp  particle.cpp
seventh-semester/computer-graphics/lab1/: CMakeLists.txt  draw_functions.cpp  functions.cpp  main.cpp
seventh-semester/computer-graphics/lab2/: CMakeLIsts.txt  draw_functions.cpp  functions.cpp  (+1 more)
(+379 files in other folders)
